--- a/index.html
+++ b/index.html
@@ -1,27 +1,267 @@
-#languageSelect {
-  display: inline-flex;
-  align-items: center;
-  gap: 0.6rem;
-  background: rgba(255,255,255,0.06);
-  padding: 0.5rem 1rem;
-  border-radius: 999px;
-  margin-bottom: 1.5rem;
-  font-size: 0.85rem;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Talk 2Me Nice — Chat</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+<style>
+:root {
+  --bg-main: linear-gradient(160deg, #1b1f27 0%, #2a2f3b 100%);
+  --bg-card: #2c313d;
+  --accent: #ffb86c;
+  --text-main: #e1e4ea;
+  --text-muted: #a1a6b0;
 }
 
-#languageSelect .label {
-  color: var(--text-muted);
-}
-
-#languageSelect select {
-  background: transparent;
-  border: none;
+body {
+  margin: 0;
+  font-family: 'Montserrat', system-ui, sans-serif;
+  background: var(--bg-main);
   color: var(--text-main);
-  font-weight: 600;
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-#languageSelect select option {
-  background: #2c313d;
-  color: #e1e4ea;
+/* Chat container */
+#chatContainer {
+  display: flex;
+  max-width: 900px;
+  margin: 2rem auto;
+  gap: 1rem;
+  animation: fadeIn 0.8s ease-out;
 }
+
+/* Profile Sidebar */
+#profileSidebar {
+  width: 220px;
+  padding: 1rem;
+  background: var(--bg-card);
+  border-radius: 16px;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+  transition: transform 0.2s ease;
+}
+#profileSidebar:hover { transform: translateY(-2px); }
+
+#learnerProfile { padding: 0.5rem; background: rgba(255,255,255,0.03); border-radius: 12px; text-align: left; }
+#learnerProfile p { margin: 0.2rem 0; font-size: 0.9rem; }
+
+/* Conversation Packs */
+#packs ul { list-style: none; padding:0; margin:0; }
+#packs li { padding:0.4rem 0.6rem; border-radius:8px; cursor:pointer; transition: 0.2s; }
+#packs li:hover { background: rgba(255,184,108,0.2); }
+
+/* Chat area */
+#chatArea { 
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background: rgba(0,0,0,0.05);
+  border-radius: 16px;
+  padding: 1rem;
+  overflow-y: auto;
+}
+
+/* Messages */
+.message {
+  max-width: 75%;
+  padding: 0.8rem 1.2rem;
+  margin-bottom: 0.7rem;
+  border-radius: 20px;
+  line-height: 1.5;
+  opacity: 0;
+  animation: fadeInMessage 0.5s forwards;
+}
+.user { background: var(--accent); color: #1b1f27; align-self: flex-end; }
+.bot { background: var(--bg-card); align-self: flex-start; }
+
+/* Animations */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+@keyframes fadeInMessage {
+  from { opacity:0; transform: translateY(10px); }
+  to { opacity:1; transform: translateY(0); }
+}
+@keyframes floatCompanion {
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-6px); }
+}
+
+/* Footer Input */
+#chatFooter {
+  display: flex;
+  padding: 0.8rem;
+  gap: 0.5rem;
+}
+#chatFooter input {
+  flex:1;
+  padding:0.6rem;
+  border-radius:12px;
+  border:none;
+  background:#1f232d;
+  color:var(--text-main);
+}
+#chatFooter button {
+  padding:0.6rem 1rem;
+  border-radius:999px;
+  border:none;
+  background:var(--accent);
+  cursor:pointer;
+}
+#chatFooter button:hover { background:#ff9f40; transform: scale(1.05); }
+
+/* Gear */
+#gear {
+  position: fixed;
+  bottom: 90px;
+  right: 20px;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: var(--bg-card);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 20px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  animation: floatCompanion 4s ease-in-out infinite;
+}
+
+/* Options Panel */
+#options {
+  position: fixed;
+  bottom: 150px;
+  right: 20px;
+  background: var(--bg-card);
+  padding: 1rem;
+  border-radius: 16px;
+  width: 260px;
+  display: none;
+}
+</style>
+</head>
+<body>
+
+<div id="chatContainer">
+  <!-- Profile Sidebar -->
+  <div id="profileSidebar">
+    <h3>Your Profile</h3>
+    <div id="learnerProfile">
+      <p>👤 <strong id="profileName"></strong></p>
+      <p>🌍 <span id="profileLanguage"></span></p>
+      <p>🧚 <span id="profileCompanion"></span></p>
+    </div>
+    <hr>
+    <h4>Conversation Packs</h4>
+    <div id="packs">
+      <ul>
+        <li onclick="loadPack('workplace')">Workplace Conversations</li>
+        <li onclick="loadPack('dating')">Dating & Social</li>
+        <li onclick="loadPack('travel')">Travel</li>
+        <li onclick="loadPack('smalltalk')">Advanced Small Talk</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Chat Area -->
+  <div id="chatArea"></div>
+</div>
+
+<!-- Footer Input -->
+<div id="chatFooter">
+  <input id="userInput" placeholder="Type a message…">
+  <button onclick="sendMessage()">Send</button>
+</div>
+
+<!-- Gear -->
+<div id="gear" onclick="toggleOptions()">⚙️</div>
+
+<div id="options">
+  <label><input type="checkbox" id="phoneticToggle"> Pronunciation Mode</label>
+</div>
+
+<script>
+// Load saved profile
+const nickname = localStorage.getItem("nickname") || "Friend";
+const language = localStorage.getItem("language") || "English";
+const companion = localStorage.getItem("companion") || "Whisp";
+
+document.getElementById("profileName").textContent = nickname;
+document.getElementById("profileLanguage").textContent = language;
+document.getElementById("profileCompanion").textContent = companion;
+
+// Chat
+const chatArea = document.getElementById("chatArea");
+
+function addMessage(text, sender="bot") {
+  const div = document.createElement("div");
+  div.className = `message ${sender}`;
+  div.textContent = text;
+  chatArea.appendChild(div);
+  chatArea.scrollTop = chatArea.scrollHeight;
+}
+
+// Send user message
+function sendMessage() {
+  const input = document.getElementById("userInput");
+  if(!input.value.trim()) return;
+  addMessage(input.value, "user");
+  input.value = "";
+  setTimeout(()=> addMessage("This is a friendly rehearsal space 💛"), 500);
+}
+
+// Gear panel toggle
+function toggleOptions() {
+  const o = document.getElementById("options");
+  o.style.display = o.style.display==="block"?"none":"block";
+}
+
+// Preset conversation packs
+const conversationPacks = {
+  workplace: [
+    "Hello! How was your weekend?",
+    "Did you finish the report?",
+    "Let's schedule a meeting for tomorrow.",
+  ],
+  dating: [
+    "Hi there! How's your day going?",
+    "Would you like to grab a coffee sometime?",
+    "I really enjoy talking with you.",
+  ],
+  travel: [
+    "Have you visited any interesting places recently?",
+    "What's your favorite city to travel to?",
+    "Do you like trying local foods?",
+  ],
+  smalltalk: [
+    "Nice weather today, isn't it?",
+    "Have you seen any good movies lately?",
+    "Do you like reading books or watching shows more?",
+  ]
+};
+
+// Load a pack into chat
+function loadPack(packName) {
+  chatArea.innerHTML = ""; // clear previous
+  const messages = conversationPacks[packName];
+  messages.forEach((msg, i) => {
+    setTimeout(()=> addMessage(msg, "bot"), i * 800);
+  });
+  addMessage(`Loaded "${packName}" conversation pack.`, "bot");
+}
+
+// Initial greeting
+addMessage(`Hi ${nickname} 🌱 I'm ${companion}.`);
+addMessage("Select a conversation pack to start practicing.");
+</script>
+
+</body>
+</html>
