--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Talk 2Me Nice — Chat</title>
+<title>Talk 2Me Nice — Guided Conversations</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -15,252 +15,254 @@
 }
 
 body {
-  margin: 0;
-  font-family: 'Montserrat', system-ui, sans-serif;
+  margin:0;
+  font-family:'Montserrat', system-ui,sans-serif;
   background: var(--bg-main);
   color: var(--text-main);
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  display:flex;
+  height:100vh;
+  overflow:hidden;
 }
 
-/* Chat container */
-#chatContainer {
-  display: flex;
-  max-width: 900px;
-  margin: 2rem auto;
-  gap: 1rem;
-  animation: fadeIn 0.8s ease-out;
-}
-
-/* Profile Sidebar */
-#profileSidebar {
-  width: 220px;
-  padding: 1rem;
+/* Sidebar */
+#sidebar {
+  width:260px;
   background: var(--bg-card);
-  border-radius: 16px;
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  box-shadow: 0 6px 16px rgba(0,0,0,0.3);
-  transition: transform 0.2s ease;
+  padding:1rem;
+  overflow-y:auto;
+  flex-shrink:0;
+  display:flex;
+  flex-direction:column;
+  gap:0.5rem;
+  box-shadow: 2px 0 12px rgba(0,0,0,0.3);
 }
-#profileSidebar:hover { transform: translateY(-2px); }
 
-#learnerProfile { padding: 0.5rem; background: rgba(255,255,255,0.03); border-radius: 12px; text-align: left; }
-#learnerProfile p { margin: 0.2rem 0; font-size: 0.9rem; }
+/* Sidebar headings */
+.pack {
+  font-weight:600;
+  font-size:1rem;
+  cursor:pointer;
+  padding:0.5rem;
+  border-radius:10px;
+  transition:all 0.2s ease;
+}
+.pack:hover { background:rgba(255,184,108,0.2); }
 
-/* Conversation Packs */
-#packs ul { list-style: none; padding:0; margin:0; }
-#packs li { padding:0.4rem 0.6rem; border-radius:8px; cursor:pointer; transition: 0.2s; }
-#packs li:hover { background: rgba(255,184,108,0.2); }
+.section {
+  padding:0.4rem 0.8rem;
+  font-size:0.9rem;
+  margin-left:0.5rem;
+  cursor:pointer;
+  border-radius:8px;
+  display:none;
+}
+.section:hover { background:rgba(255,184,108,0.2); }
 
 /* Chat area */
-#chatArea { 
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  background: rgba(0,0,0,0.05);
-  border-radius: 16px;
-  padding: 1rem;
-  overflow-y: auto;
-}
-
-/* Messages */
-.message {
-  max-width: 75%;
-  padding: 0.8rem 1.2rem;
-  margin-bottom: 0.7rem;
-  border-radius: 20px;
-  line-height: 1.5;
-  opacity: 0;
-  animation: fadeInMessage 0.5s forwards;
-}
-.user { background: var(--accent); color: #1b1f27; align-self: flex-end; }
-.bot { background: var(--bg-card); align-self: flex-start; }
-
-/* Animations */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-@keyframes fadeInMessage {
-  from { opacity:0; transform: translateY(10px); }
-  to { opacity:1; transform: translateY(0); }
-}
-@keyframes floatCompanion {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-6px); }
-}
-
-/* Footer Input */
-#chatFooter {
-  display: flex;
-  padding: 0.8rem;
-  gap: 0.5rem;
-}
-#chatFooter input {
+#chatArea {
   flex:1;
-  padding:0.6rem;
-  border-radius:12px;
+  display:flex;
+  flex-direction:column;
+  padding:1rem;
+}
+
+#chat {
+  flex:1;
+  overflow-y:auto;
+  display:flex;
+  flex-direction:column;
+  gap:0.6rem;
+  margin-bottom:0.5rem;
+}
+
+.message {
+  max-width:75%;
+  padding:0.7rem 1.2rem;
+  border-radius:16px;
+  line-height:1.4;
+  animation: fadeInMessage 0.4s forwards;
+}
+.user { background:var(--accent); color:#1b1f27; align-self:flex-end; }
+.bot { background:var(--bg-card); align-self:flex-start; }
+
+input {
+  flex:1;
+  padding:0.6rem 1rem;
+  border-radius:999px;
   border:none;
   background:#1f232d;
   color:var(--text-main);
 }
-#chatFooter button {
+
+button {
+  margin-left:0.5rem;
   padding:0.6rem 1rem;
   border-radius:999px;
   border:none;
-  background:var(--accent);
+  background: var(--accent);
   cursor:pointer;
+  transition: all 0.3s ease;
 }
-#chatFooter button:hover { background:#ff9f40; transform: scale(1.05); }
+button:hover { background:#ff9f40; transform:scale(1.03); }
 
-/* Gear */
-#gear {
-  position: fixed;
-  bottom: 90px;
-  right: 20px;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background: var(--bg-card);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  font-size: 20px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+/* Footer & input area */
+#inputArea {
+  display:flex;
+  gap:0.5rem;
+  padding-top:0.5rem;
+}
+
+/* Animations */
+@keyframes fadeInMessage {
+  from { opacity:0; transform: translateY(10px);}
+  to { opacity:1; transform: translateY(0);}
+}
+
+@keyframes floatCompanion {
+  0%, 100% { transform: translateY(0);}
+  50% { transform: translateY(-6px);}
+}
+
+/* Gear button */
+#gear { 
+  position:fixed; 
+  bottom:90px; right:20px; 
+  width:44px; height:44px; 
+  border-radius:50%; 
+  background:var(--bg-card); 
+  display:flex; 
+  align-items:center; 
+  justify-content:center; 
+  cursor:pointer; 
+  font-size:20px; 
+  box-shadow:0 4px 12px rgba(0,0,0,0.3);
   animation: floatCompanion 4s ease-in-out infinite;
 }
 
-/* Options Panel */
+/* Options panel */
 #options {
-  position: fixed;
-  bottom: 150px;
-  right: 20px;
-  background: var(--bg-card);
-  padding: 1rem;
-  border-radius: 16px;
-  width: 260px;
-  display: none;
+  position:fixed;
+  bottom:150px;
+  right:20px;
+  background:var(--bg-card);
+  padding:1rem;
+  border-radius:16px;
+  width:220px;
+  display:none;
+  box-shadow:0 6px 16px rgba(0,0,0,0.3);
 }
 </style>
 </head>
 <body>
 
-<div id="chatContainer">
-  <!-- Profile Sidebar -->
-  <div id="profileSidebar">
-    <h3>Your Profile</h3>
-    <div id="learnerProfile">
-      <p>👤 <strong id="profileName"></strong></p>
-      <p>🌍 <span id="profileLanguage"></span></p>
-      <p>🧚 <span id="profileCompanion"></span></p>
-    </div>
-    <hr>
-    <h4>Conversation Packs</h4>
-    <div id="packs">
-      <ul>
-        <li onclick="loadPack('workplace')">Workplace Conversations</li>
-        <li onclick="loadPack('dating')">Dating & Social</li>
-        <li onclick="loadPack('travel')">Travel</li>
-        <li onclick="loadPack('smalltalk')">Advanced Small Talk</li>
-      </ul>
-    </div>
+<div id="sidebar">
+  <h3>Conversation Packs</h3>
+  <div class="pack" onclick="toggleSections('workplace')">Workplace Conversations</div>
+    <div class="section" data-pack="workplace">Greetings</div>
+    <div class="section" data-pack="workplace">Meetings</div>
+    <div class="section" data-pack="workplace">Casual Chat</div>
+
+  <div class="pack" onclick="toggleSections('dating')">Dating & Social</div>
+    <div class="section" data-pack="dating">Greetings</div>
+    <div class="section" data-pack="dating">Small Talk</div>
+    <div class="section" data-pack="dating">Compliments & Closings</div>
+
+  <div class="pack" onclick="toggleSections('travel')">Travel</div>
+    <div class="section" data-pack="travel">Greetings</div>
+    <div class="section" data-pack="travel">Directions</div>
+    <div class="section" data-pack="travel">Food & Experiences</div>
+
+  <div class="pack" onclick="toggleSections('advanced')">Advanced Small Talk</div>
+    <div class="section" data-pack="advanced">Weather & Events</div>
+    <div class="section" data-pack="advanced">Opinions & Stories</div>
+    <div class="section" data-pack="advanced">Humor & Expressions</div>
+</div>
+
+<div id="chatArea">
+  <div id="chat"></div>
+
+  <div id="inputArea">
+    <input id="userInput" placeholder="Type a word or phrase…" />
+    <button onclick="sendMessage()">Send</button>
   </div>
-
-  <!-- Chat Area -->
-  <div id="chatArea"></div>
 </div>
 
-<!-- Footer Input -->
-<div id="chatFooter">
-  <input id="userInput" placeholder="Type a message…">
-  <button onclick="sendMessage()">Send</button>
-</div>
-
-<!-- Gear -->
 <div id="gear" onclick="toggleOptions()">⚙️</div>
-
 <div id="options">
-  <label><input type="checkbox" id="phoneticToggle"> Pronunciation Mode</label>
+  <label><input type="checkbox" id="phoneticToggle" /> Pronunciation mode</label>
 </div>
 
 <script>
-// Load saved profile
-const nickname = localStorage.getItem("nickname") || "Friend";
-const language = localStorage.getItem("language") || "English";
-const companion = localStorage.getItem("companion") || "Whisp";
+const packs = {
+  'workplace': {
+    'Greetings': ["Hi", "Good morning", "How are you?"],
+    'Meetings': ["Let's schedule a meeting", "Agenda for today", "Deadline update"],
+    'Casual Chat': ["Weekend plans?", "Coffee break?", "Lunch together?"]
+  },
+  'dating': {
+    'Greetings': ["Hi", "Hey, how are you?", "Good to see you"],
+    'Small Talk': ["Your day?", "Hobbies?", "Movies?"],
+    'Compliments & Closings': ["You look great", "Nice seeing you", "See you soon"]
+  },
+  'travel': {
+    'Greetings': ["Hello", "Good day", "Excuse me"],
+    'Directions': ["Where is the bathroom?", "How do I get to the station?", "Left or right?"],
+    'Food & Experiences': ["What do you recommend?", "I like this dish", "Delicious!"]
+  },
+  'advanced': {
+    'Weather & Events': ["Nice weather today", "Did you hear the news?", "Rain expected?"],
+    'Opinions & Stories': ["I think that...", "Let me tell you a story...", "My opinion is..."],
+    'Humor & Expressions': ["That's funny!", "I can't believe it", "LOL!"]
+  }
+};
 
-document.getElementById("profileName").textContent = nickname;
-document.getElementById("profileLanguage").textContent = language;
-document.getElementById("profileCompanion").textContent = companion;
-
-// Chat
-const chatArea = document.getElementById("chatArea");
+const chat = document.getElementById("chat");
 
 function addMessage(text, sender="bot") {
   const div = document.createElement("div");
   div.className = `message ${sender}`;
   div.textContent = text;
-  chatArea.appendChild(div);
-  chatArea.scrollTop = chatArea.scrollHeight;
+  chat.appendChild(div);
+  chat.scrollTop = chat.scrollHeight;
+
+  if(sender==="bot" && document.getElementById("phoneticToggle").checked){
+    const u = new SpeechSynthesisUtterance(text);
+    speechSynthesis.speak(u);
+  }
 }
 
-// Send user message
-function sendMessage() {
+function sendMessage(){
   const input = document.getElementById("userInput");
   if(!input.value.trim()) return;
-  addMessage(input.value, "user");
-  input.value = "";
-  setTimeout(()=> addMessage("This is a friendly rehearsal space 💛"), 500);
+  addMessage(input.value,"user");
+  input.value="";
 }
 
-// Gear panel toggle
-function toggleOptions() {
-  const o = document.getElementById("options");
-  o.style.display = o.style.display==="block"?"none":"block";
-}
-
-// Preset conversation packs
-const conversationPacks = {
-  workplace: [
-    "Hello! How was your weekend?",
-    "Did you finish the report?",
-    "Let's schedule a meeting for tomorrow.",
-  ],
-  dating: [
-    "Hi there! How's your day going?",
-    "Would you like to grab a coffee sometime?",
-    "I really enjoy talking with you.",
-  ],
-  travel: [
-    "Have you visited any interesting places recently?",
-    "What's your favorite city to travel to?",
-    "Do you like trying local foods?",
-  ],
-  smalltalk: [
-    "Nice weather today, isn't it?",
-    "Have you seen any good movies lately?",
-    "Do you like reading books or watching shows more?",
-  ]
-};
-
-// Load a pack into chat
-function loadPack(packName) {
-  chatArea.innerHTML = ""; // clear previous
-  const messages = conversationPacks[packName];
-  messages.forEach((msg, i) => {
-    setTimeout(()=> addMessage(msg, "bot"), i * 800);
+// Sidebar toggling
+function toggleSections(packName){
+  document.querySelectorAll(`#sidebar .section[data-pack]`).forEach(sec=>{
+    if(sec.dataset.pack === packName){
+      sec.style.display = (sec.style.display==="block")?"none":"block";
+    } else sec.style.display="none";
   });
-  addMessage(`Loaded "${packName}" conversation pack.`, "bot");
 }
 
-// Initial greeting
-addMessage(`Hi ${nickname} 🌱 I'm ${companion}.`);
-addMessage("Select a conversation pack to start practicing.");
+// Clicking a section sends first phrase to chat
+document.querySelectorAll('.section').forEach(sec=>{
+  sec.onclick = ()=>{
+    const pack = sec.dataset.pack;
+    const section = sec.textContent;
+    packs[pack][section].forEach(phrase=>{
+      addMessage(phrase,"bot");
+    });
+  };
+});
+
+// Gear toggle
+function toggleOptions(){
+  const o = document.getElementById("options");
+  o.style.display = (o.style.display==="block")?"none":"block";
+}
 </script>
 
 </body>
